--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,6 +43,8 @@
               %li= link_to "Entités", entities_path
               %li= link_to "Domaines", domains_path
               %li= link_to "Collaborateurs", collaborators_path
+              %li= link_to "Projets", projects_path
+              %li= link_to "Propositions", proposals_path
         .span9
           = bootstrap_flash
           = yield
