--- a/app/views/collaborators/_form.html.haml
+++ b/app/views/collaborators/_form.html.haml
@@ -2,12 +2,12 @@
   = f.input :prenom, label: "Prénom"
   = f.input :nom
   = f.input :id_karma
-  = f.input :role, label: "Rôle", collection: [ "consultant", "manager" ], prompt: "Sélectionner le rôle du collaborateur"
+  = f.input :role, label: "Rôle", collection: ["consultant", "manager", "resp_domaine"], prompt: "Sélectionner le rôle du collaborateur"
   = f.input :email, placeholder: "prénom.nom@devoteam.com"
-  = f.input :etat, collection: [ "non-validé", "validé" ], prompt: "Sélectionner la validité du collaborateur"
+  = f.input :etat, collection: ["non-validé", "validé"], prompt: "Sélectionner la validité du collaborateur"
   = f.input :statut
-  = f.input :niv_diplome, collection: [ ">= Bac + 3", "Bac + 2", "Autres" ]
-  = f.input :nat_diplome, collection: [ "Littéraire", "Scientifique" ]
+  = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
+  = f.input :nat_diplome, collection: ["Littéraire", "Scientifique"]
   = f.association :entity, prompt: "Sélectionner l'entité du collaborateur"
   = f.association :manager, collection: Collaborator.managers.all(order: "nom"), prompt: "Sélectionner le manager du consultant"
   = f.input :commentaire
