--- a/app/views/collaborators/_form.html.haml
+++ b/app/views/collaborators/_form.html.haml
@@ -9,7 +9,7 @@
   = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
   = f.input :nat_diplome, collection: ["Littéraire", "Scientifique"]
   = f.association :entity, prompt: "Sélectionner l'entité du collaborateur"
-  = f.association :manager, collection: Collaborator.managers.all(order: "nom"), prompt: "Sélectionner le manager du consultant"
+  = f.association :manager, collection: Collaborator.managers, prompt: "Sélectionner le manager du consultant"
   = f.input :commentaire
   .form-actions
     = f.button :submit, :class => 'btn-primary'
