--- a/app/views/entities/_form.html.haml
+++ b/app/views/entities/_form.html.haml
@@ -1,6 +1,6 @@
 = simple_form_for @entity, :html => { :class => 'form-horizontal' } do |f|
   = f.input :name, label: "Nom"
-  = f.association :manager, collection: Collaborator.managers.all(order: "nom"), prompt: "Sélectionner le manager de l'entité"
+  = f.association :manager, collection: Collaborator.managers, prompt: "Sélectionner le manager de l'entité"
   = f.input :description
   .form-actions
     = f.button :submit, :class => 'btn-primary'
