--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -19,3 +19,44 @@
   = link_to "Retour aux Entités", entities_path, :class => 'btn'
   = link_to "Modifier", edit_entity_path(@entity), :class => 'btn'
   = link_to "Supprimer", entity_path(@entity), :method => "delete", :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-danger'
+  = link_to "Proposer des consultants","#", class: "proposer btn btn-primary"
+
+= simple_nested_form_for @list, :html => { :class => 'form-horizontal well' } do |f|
+  = f.input :date, label: "Semaine", hint: "Une date de la semaine de proposition", as: :string, input_html: {class: "datepicker"}
+  = f.association :entity, as: :hidden
+  %table#proposals.table.table-striped
+    = f.fields_for :proposals, wrapper: false do |proposal_form|
+      %tr.fields
+        %td= proposal_form.association :consultant, label: false, prompt: "Sélectionner le consultant", collection: @entity.collaborators.consultants.valides
+        %td= proposal_form.input :nbre_jour, label: false, placeholder: "Nombre de jours de disponibilité"
+        %td= proposal_form.input :date, as: :string, :input_html => {:class => 'datepicker'}, label: false, placeholder: "Date d'arrivée"
+        %td= proposal_form.link_to_remove "Supprimer", :class => 'btn btn-danger'
+  %p= f.link_to_add "Ajouter une proposition", :proposals, data: { target: "#proposals" }, :class => 'btn btn-primary'
+  .form-actions
+    = f.button :submit, :class => 'btn btn-primary'
+    = link_to "Annuler", "#", :class => 'btn annuler'
+%h2 Listes des propositions
+:javascript
+  $(".datepicker").datepicker({
+    dateFormat: "dd-mm-yy",
+    showWeek: true,
+    firstDay: 1,
+    showAnim: "slideDown"
+  }); ;
+  $(document).on('nested:fieldAdded', function(event){
+    $(".datepicker").datepicker({
+      dateFormat: "dd-mm-yy",
+      showWeek: true,
+      firstDay: 1,
+      showAnim: "slideDown"
+    });
+  }); ;
+  $(document).ready(function() {
+    $('#new_list').hide();
+    $('.proposer').click(function() {
+      $('#new_list').slideDown("slow");
+    });
+    $('.annuler').click(function() {
+      $('#new_list').slideUp("slow");
+    });
+  });
