--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -16,6 +16,49 @@
   = @domain.description
 
 .form-actions
-  = link_to "Retour aux Domaines", domains_path, :class => 'btn'
+  = # link_to "Retour aux Domaines", domains_path, :class => 'btn'
   = link_to "Modifier", edit_domain_path(@domain), :class => 'btn'
   = link_to "Supprimer", domain_path(@domain), :method => "delete", :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-danger'
+  = link_to "Nouveau Projet", "#", class: "btn btn-primary", id: "nouv_projet"
+
+= simple_form_for @project, :html => { :class => 'form-horizontal well' } do |f|
+  = f.input :name, label: "Nom"
+  = f.association :domain, as: :hidden
+  = f.association :chef, collection: Collaborator.consultants.valides, prompt: "Sélectionner le chef du projet"
+  = f.association :maitrise_ouvrage, label: "Maître d'ouvrage", collection: Collaborator.consultants.valides, prompt: "Sélectionner le maître d'ouvrage"
+  = f.input :description
+  .form-actions
+    = f.button :submit, :class => 'btn-primary'
+    = link_to "Annuler", "#", :class => 'btn', id: "annuler_projet"
+
+%h2 Liste des Projets
+%table.table.table-striped
+  %thead
+    %tr
+      %th Nom
+      %th Chef
+      %th Maître d'ouvrage
+      %th Actions
+  %tbody
+    - @domain.projects.each do |project|
+      %tr.projet
+        %td= project.name
+        %td= project.chef.try(:name)
+        %td= project.maitrise_ouvrage.try(:name)
+        %td
+          = link_to "Consulter", project, :class => 'btn btn-mini'
+          = link_to "Modifier", edit_project_path(project), :class => 'btn btn-mini'
+          = link_to "Supprimer", project_path(project), :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger'
+
+:javascript
+  $(document).ready(function() {
+    $('#new_project').hide();
+    $('#nouv_projet').click(function() {
+      $('#new_project').slideDown("slow");
+    });
+    $('#annuler_projet').click(function() {
+      $('#new_project').slideUp("slow");
+    });
+    
+    $(".projet:last").hide();
+  });
