--- a/app/views/requests/show.html.haml
+++ b/app/views/requests/show.html.haml
@@ -7,9 +7,9 @@
   %br
   = @request.project.name
 %p
-  %strong Consultant :
+  %strong Consultant proposé :
   %br
-  = @request.consultant.name
+  = @request.proposal.name
 %p
   %strong Date :
   %br
