--- a/app/views/collaborators/_form.html.haml
+++ b/app/views/collaborators/_form.html.haml
@@ -1,13 +1,13 @@
 = simple_form_for @collaborator, :html => { :class => 'form-horizontal' } do |f|
-  = f.input :prenom, label: "Prénom"
   = f.input :nom
+  = f.input :prenom, label: "Prénom"
   = f.input :id_karma
   = f.input :role, label: "Rôle", collection: ["consultant", "manager", "resp_domaine"], prompt: "Sélectionner le rôle du collaborateur"
   = f.input :email, placeholder: "prénom.nom@devoteam.com"
   = f.input :etat, collection: ["non-validé", "validé"], prompt: "Sélectionner la validité du collaborateur"
   = f.input :statut
   = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
-  = f.input :nat_diplome, collection: ["Littéraire", "Scientifique"]
+  = f.input :nat_diplome, collection: ["Autre", "Scientifique"]
   = f.association :entity, prompt: "Sélectionner l'entité du collaborateur"
   = f.association :manager, collection: Collaborator.managers, prompt: "Sélectionner le manager du consultant"
   = f.input :commentaire
