--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -16,10 +16,28 @@
   = @entity.description
 
 .form-actions
-  = link_to "Retour aux Entités", entities_path, :class => 'btn'
+  =# link_to "Retour aux Entités", entities_path, :class => 'btn'
   = link_to "Modifier", edit_entity_path(@entity), :class => 'btn'
   = link_to "Supprimer", entity_path(@entity), :method => "delete", :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-danger'
-  = link_to "Proposer des consultants","#", class: "proposer btn btn-primary"
+  = link_to "Nouveau Collaborateur","#", class: "btn btn-primary", id: "nouv_collaborateur"
+  = link_to "Proposer des consultants","#", class: "btn btn-primary", id: "nouv_propositions"
+
+= simple_form_for @collaborator, :html => { :class => 'form-horizontal well' } do |f|
+  = f.input :nom
+  = f.input :prenom, label: "Prénom"
+  = f.input :id_karma
+  = f.input :role, label: "Rôle", collection: ["consultant", "manager", "resp_domaine"], prompt: "Sélectionner le rôle du collaborateur"
+  = f.input :email, placeholder: "prénom.nom@devoteam.com"
+  = f.input :etat, collection: ["non-validé", "validé"], prompt: "Sélectionner la validité du collaborateur"
+  = f.input :statut
+  = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
+  = f.input :nat_diplome, collection: ["Autre", "Scientifique"]
+  = f.association :entity, as: :hidden
+  = f.association :manager, collection: @entity.collaborators.managers, prompt: "Sélectionner le manager du consultant"
+  = f.input :commentaire
+  .form-actions
+    = f.button :submit, :class => 'btn-primary'
+    = link_to "Annuler", "#", :class => 'btn', id: "annuler_collaborateur"
 
 = simple_nested_form_for @list, :html => { :class => 'form-horizontal well' } do |f|
   = f.input :date, label: "Semaine", hint: "Une date de la semaine de proposition", as: :string, input_html: {class: "datepicker"}
@@ -27,15 +45,63 @@
   %table#proposals.table.table-striped
     = f.fields_for :proposals, wrapper: false do |proposal_form|
       %tr.fields
-        %td= proposal_form.association :consultant, label: false, prompt: "Sélectionner le consultant", collection: @entity.collaborators.consultants.valides
+        %td= proposal_form.input :etat, as: :hidden, :input_html => { value: "disponible" }
+        %td= proposal_form.association :consultant, prompt: "Sélectionner le consultant", collection: @entity.collaborators.consultants.valides
         %td= proposal_form.input :nbre_jour, label: false, placeholder: "Nombre de jours de disponibilité"
-        %td= proposal_form.input :date, as: :string, :input_html => {:class => 'datepicker'}, label: false, placeholder: "Date d'arrivée"
+        %td= proposal_form.input :date, as: :string, :input_html => {:class => 'datepicker', value: Time.now.to_date.next_week}, label: false, placeholder: "Date d'arrivée"
         %td= proposal_form.link_to_remove "Supprimer", :class => 'btn btn-danger'
   %p= f.link_to_add "Ajouter une proposition", :proposals, data: { target: "#proposals" }, :class => 'btn btn-primary'
   .form-actions
     = f.button :submit, :class => 'btn btn-primary'
-    = link_to "Annuler", "#", :class => 'btn annuler'
+    = link_to "Annuler", "#", :class => 'btn', id: "annuler_propositions"
+
 %h2 Listes des propositions
+- @entity.lists.each do |list|
+  %h3
+    = list.date
+    = link_to "Modifier", edit_list_path(list), class: 'btn btn-mini'
+    = link_to "Supprimer", list, :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger'
+  %table.table.table-striped.propositions
+    %thead
+      %tr
+        %th Consultant
+        %th Date d'arrivée
+        %th Nombre de jours
+        %th Etat
+        %th Actions
+    %tbody
+      - list.proposals.each do |proposal|
+        %tr
+          %td= proposal.consultant.name
+          %td= proposal.date
+          %td= proposal.nbre_jour
+          %td= proposal.etat
+          %td
+            = link_to "Consulter", proposal, :class => 'btn btn-mini'
+            = link_to "Modifier", edit_proposal_path(proposal), :class => 'btn btn-mini'
+            = link_to "Supprimer", proposal_path(proposal), :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger'
+
+%h2 Liste des Collaborateurs
+%table.table.table-striped
+  %thead
+    %tr
+      %th Prénom
+      %th Nom
+      %th Rôle
+      %th Etat
+      %th Actions
+  %tbody
+    - @entity.collaborators.each do |collaborator|
+      %tr.collaborateur
+        %td= collaborator.prenom
+        %td= collaborator.nom
+        %td= collaborator.role
+        %td= collaborator.etat
+        %td
+          = link_to "Consulter", collaborator, :class => 'btn btn-mini'
+          = link_to "Modifier", edit_collaborator_path(collaborator), :class => 'btn btn-mini'
+          = link_to "Supprimer", collaborator_path(collaborator), :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger'
+
 :javascript
   $(".datepicker").datepicker({
     dateFormat: "dd-mm-yy",
@@ -53,10 +119,24 @@
   }); ;
   $(document).ready(function() {
     $('#new_list').hide();
-    $('.proposer').click(function() {
+    $('#nouv_propositions').click(function() {
+      $('#new_collaborator').slideUp("slow");
       $('#new_list').slideDown("slow");
     });
-    $('.annuler').click(function() {
+    $('#annuler_propositions').click(function() {
       $('#new_list').slideUp("slow");
     });
+
+    $('#new_collaborator').hide();
+    $('#nouv_collaborateur').click(function() {
+      $('#new_list').slideUp("slow");
+      $('#new_collaborator').slideDown("slow");
+    });
+    $('#annuler_collaborateur').click(function() {
+      $('#new_collaborator').slideUp("slow");
+    });
+    
+    $("h3:last").hide();
+    $(".propositions:last").hide();
+    $(".collaborateur:last").hide();
   });
