--- a/app/views/lists/edit.html.haml
+++ b/app/views/lists/edit.html.haml
@@ -1,4 +1,4 @@
 - model_class = List
 .page-header
-  %h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize
+  %h1 Modification de Propositions
 = render :partial => "form"
