--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -21,3 +21,10 @@
           = link_to t('.destroy', :default => t("helpers.links.destroy")), list_path(list), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
 
 = link_to t('.new', :default => t("helpers.links.new")), new_list_path, :class => 'btn btn-primary'
+
+= link_to "Modal", "#modal", :class => 'btn', "data-toggle" => 'modal'
+
+= modal_dialog :id => "modal",
+  :header => { :show_close => true, :dismiss => 'modal', :title => 'Modal header' },
+  :body   => 'This is the body',
+  :footer => content_tag(:button, 'Save', :class => 'btn')
