--- a/app/views/proposals/show.html.haml
+++ b/app/views/proposals/show.html.haml
@@ -18,8 +18,31 @@
   %strong Etat de la proposition
   %br
   = @proposal.etat
-
+%p
+  %strong Projet d'affectation
+  %br
+  = @proposal.project.try(:name)
 .form-actions
   = link_to "Retour aux Propositions", proposals_path, :class => 'btn'
   = link_to "Modifier", edit_proposal_path(@proposal), :class => 'btn'
   = link_to "Supprimer", proposal_path(@proposal), :method => "delete", :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-danger'
+  = link_to "Demander", "#", class: "btn btn-primary", id: "nouv_demande"
+:javascript
+  $(".datepicker").datepicker({
+    dateFormat: "dd-mm-yy",
+    showWeek: true,
+    firstDay: 1,
+    showAnim: "slideDown"
+  }); ;
+
+  $(document).ready(function() {
+    $('#new_request').hide();
+    $('#nouv_demande').click(function() {
+      $('#new_request').slideDown("slow");
+    });
+    $('#annuler_demande').click(function() {
+      $('#new_request').slideUp("slow");
+    });
+    
+    $(".demande:last").hide();
+  });
