--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,7 +45,7 @@
               %li= link_to "Collaborateurs", collaborators_path
               %li= link_to "Projets", projects_path
               %li= link_to "Propositions", proposals_path
-              %li= link_to "Affectations", affectations_path
+              %li= link_to "Gérer les affectations", affectations_path
         .span9
           = bootstrap_flash
           = yield
