--- a/app/views/proposals/index.html.haml
+++ b/app/views/proposals/index.html.haml
@@ -22,7 +22,7 @@
         %td
           = link_to "Consulter", proposal, :class => 'btn btn-mini'
           = link_to "Reserver", reserver_proposal_path(proposal), :class => 'btn btn-mini'
-          = link_to "Annuler", annuler_proposal_path(proposal), :class => 'btn btn-mini'
+          =# link_to "Annuler", annuler_proposal_path(proposal), :class => 'btn btn-mini'
           =# link_to "Modifier", edit_proposal_path(proposal), :class => 'btn btn-mini'
           =# link_to "Supprimer", proposal_path(proposal), :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger'
 %h2 Les propositions reservées
@@ -44,7 +44,7 @@
         %td
           = link_to "Consulter", proposal, :class => 'btn btn-mini'
           = link_to "Liberer", liberer_proposal_path(proposal), :class => 'btn btn-mini'
-          = link_to "Annuler", annuler_proposal_path(proposal), :class => 'btn btn-mini'
+          =# link_to "Annuler", annuler_proposal_path(proposal), :class => 'btn btn-mini'
           =# link_to "Modifier", edit_proposal_path(proposal), :class => 'btn btn-mini'
           =# link_to "Supprimer", proposal_path(proposal), :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger'
 %h2 Les propositions annulées
