--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -39,21 +39,22 @@
     = f.button :submit, :class => 'btn-primary'
     = link_to "Annuler", "#", :class => 'btn', id: "annuler_collaborateur"
 
-= simple_nested_form_for @list, :html => { :class => 'form-horizontal well' } do |f|
-  = f.input :date, label: "Semaine", hint: "Une date de la semaine de proposition", as: :string, input_html: {class: "datepicker"}
+= simple_nested_form_for @list, html: { class: 'form-horizontal well' } do |f|
+  = f.input :date, as: :hidden, input_html: { value: Time.now.to_date.next_week}
   = f.association :entity, as: :hidden
   %table#proposals.table.table-striped
     = f.fields_for :proposals, wrapper: false do |proposal_form|
       %tr.fields
-        %td= proposal_form.input :etat, as: :hidden, :input_html => { value: "disponible" }
-        %td= proposal_form.association :consultant, prompt: "Sélectionner le consultant", collection: @entity.collaborators.consultants.valides
-        %td= proposal_form.input :nbre_jour, label: false, placeholder: "Nombre de jours de disponibilité"
-        %td= proposal_form.input :date, as: :string, :input_html => {:class => 'datepicker', value: Time.now.to_date.next_week}, label: false, placeholder: "Date d'arrivée"
-        %td= proposal_form.link_to_remove "Supprimer", :class => 'btn btn-danger'
-  %p= f.link_to_add "Ajouter une proposition", :proposals, data: { target: "#proposals" }, :class => 'btn btn-primary'
+        %td= proposal_form.input :etat, as: :hidden, input_html: { value: "disponible" }
+        %td
+          = proposal_form.association :consultant, prompt: "Sélectionner le consultant", collection: @entity.collaborators.consultants.valides
+          = proposal_form.input :nbre_jour, label: false, placeholder: "Nombre de jours de disponibilité"
+          = proposal_form.input :date, as: :string, input_html: {class: 'datepicker', value: Time.now.to_date.next_week}, label: false, placeholder: "Date d'arrivée"
+          = proposal_form.link_to_remove "Supprimer", class: 'btn btn-danger'
+  %p= f.link_to_add "Ajouter une proposition", :proposals, data: { target: "#proposals" }, class: 'btn btn-primary'
   .form-actions
-    = f.button :submit, :class => 'btn btn-primary'
-    = link_to "Annuler", "#", :class => 'btn', id: "annuler_propositions"
+    = f.button :submit, class: 'btn btn-primary'
+    = link_to "Annuler", "#", class: 'btn', id: "annuler_propositions"
 
 %h2 Listes des propositions
 - @entity.lists.each do |list|
