--- a/app/views/proposals/gestion_affectations.html.haml
+++ b/app/views/proposals/gestion_affectations.html.haml
@@ -2,6 +2,18 @@
   %h1 
     Gestion des affectations
     = Time.now.next_week.strftime("S%W %Y")
+%h2 Les consultants sortants
+%table.table.table-striped
+  %thead
+    %tr
+      %th Consultant
+      %th Dernier projet
+  %tbody
+    - @propositions_sortantes.each do |proposal|
+      %tr
+        %td= link_to proposal.consultant.name, "#modal"+proposal.consultant_id.to_s, "data-toggle" => 'modal'
+        %td= proposal.project.name
+
 %h2 Les consultants disponibles
 %table.table.table-striped
   %thead
@@ -20,6 +32,7 @@
           =# link_to "Consulter", proposal, :class => 'btn btn-mini'
           =# link_to "Reserver", reserver_proposal_path(proposal), :class => 'btn btn-mini'
           = link_to "Reserver", "#proposition"+proposal.id.to_s, class: 'btn btn-mini', "data-toggle" => "modal"
+
 %h2 Les consultants reservés
 %table.table.table-striped
   %thead
@@ -40,20 +53,23 @@
           =# link_to "Consulter", proposal, :class => 'btn btn-mini'
           = link_to "Liberer", liberer_proposal_path(proposal), :class => 'btn btn-mini'
           = link_to "Valider", valider_proposal_path(proposal), :class => 'btn btn-mini'
-%h2 Les consultants sortants
-%table.table.table-striped
-  %thead
-    %tr
-      %th Consultant
-      %th Entité
-      %th Dernier projet
-      %th Actions
-  %tbody
-    - @propositions_sortantes.each do |proposal|
-      %tr
-        %td= link_to proposal.consultant.name, "#modal"+proposal.consultant_id.to_s, "data-toggle" => 'modal'
-        %td= proposal.consultant.entity.name
-        %td= proposal.project.name
+
+- @propositions_sortantes.each do |proposal|
+  - dialog_body = capture do
+    %p
+      %strong Niveau de diplôme :
+      = proposal.consultant.niv_diplome
+    %p
+      %strong Nature du diplôme :
+      = proposal.consultant.nat_diplome
+    %p
+      %strong Entité :
+      = proposal.consultant.entity.name
+  = modal_dialog id: "modal"+proposal.consultant_id.to_s,
+  header: { title: proposal.consultant.name },
+  body: dialog_body,
+  footer: content_tag(:button, 'Fermer', class: 'btn', "data-dismiss" => "modal")
+
 - @propositions_disponibles.each do |proposal|
   - dialog_body = capture do
     %p
@@ -69,6 +85,7 @@
   header: { title: proposal.consultant.name },
   body: dialog_body,
   footer: content_tag(:button, 'Fermer', class: 'btn', "data-dismiss" => "modal")
+
 - @propositions_reservees.each do |proposal|
   - dialog_body = capture do
     %p
@@ -84,6 +101,7 @@
   header: { title: proposal.consultant.name },
   body: dialog_body,
   footer: content_tag(:button, 'Fermer', class: 'btn', "data-dismiss" => "modal")
+
 - @propositions_disponibles.each do |proposal|
   - dialog_body = capture do
     = simple_form_for proposal, :html => { class: 'form-horizontal' } do |f|
