Fin des fonctions de gestion des affectations

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require bootstrap_and_overrides
  *= require jquery.ui.all
+ *= require jscrollpane
  *= require_self
  *= require_tree .
  */
