--- a/app/views/collaborators/_form.html.haml
+++ b/app/views/collaborators/_form.html.haml
@@ -2,8 +2,10 @@
   = f.input :nom
   = f.input :prenom, label: "Prénom"
   = f.input :id_karma
+  = f.input :profil
   = f.input :role, label: "Rôle", collection: ["consultant", "manager", "resp_domaine"], prompt: "Sélectionner le rôle du collaborateur"
   = f.input :email, placeholder: "prénom.nom@devoteam.com"
+  = f.input :eligibilite, collection: ["éligible", "non-éligible"], prompt: "Sélenner l'éligibilité du consultant"
   = f.input :etat, collection: ["non-validé", "validé"], prompt: "Sélectionner la validité du collaborateur"
   = f.input :statut
   = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
