--- a/app/views/proposals/new.html.haml
+++ b/app/views/proposals/new.html.haml
@@ -1,4 +1,22 @@
 - model_class = Proposal
 .page-header
   %h1 Nouvelle Proposition
-= render :partial => "form"
+=# render :partial => "form"
+= simple_form_for @proposal, :html => { :class => 'form-horizontal' } do |f|
+  = f.association :entity, input_html: {disabled: "disabled"}
+  = f.association :entity, as: :hidden
+  = f.association :consultant, collection: @proposal.entity.collaborators.consultants.valides, input_html: {disabled: "disabled"}, prompt: "Sélectionner le consultant"
+  = f.association :consultant, as: :hidden
+  = f.input :date, label: "Date d'arrivée", as: :string, input_html: {class: "datepicker"}
+  = f.input :nbre_jour, label: "Nombre de jours"
+  = f.input :etat, as: :hidden
+  .form-actions
+    = f.submit "Proposer", :class => 'btn btn-primary'
+    = link_to "Annuler", creer_propositions_entity_path(@proposal.entity), :class => 'btn'
+:javascript
+  $(".datepicker").datepicker({
+    dateFormat: "dd-mm-yy",
+    showWeek: true,
+    firstDay: 1,
+    showAnim: "slideDown"
+  }); ;
