--- a/app/views/collaborators/new.html.haml
+++ b/app/views/collaborators/new.html.haml
@@ -1,4 +1,23 @@
 - model_class = Collaborator
 .page-header
   %h1 Nouveau Collaborateur
-= render :partial => "form"
+=# render :partial => "form"
+= simple_form_for @collaborator, :html => { :class => 'form-horizontal' } do |f|
+  = f.association :entity, input_html: {disabled: "disabled"}
+  = f.association :entity, as: :hidden
+  = f.input :nom
+  = f.input :prenom, label: "Prénom"
+  = f.input :id_karma
+  = f.input :profil
+  = f.input :role, label: "Rôle", collection: ["consultant", "manager", "resp_domaine"], prompt: "Sélectionner le rôle du collaborateur"
+  = f.input :email, placeholder: "prénom.nom@devoteam.com"
+  = f.input :eligibilite, collection: ["éligible", "non-éligible"], prompt: "Sélenner l'éligibilité du consultant"
+  = f.input :etat, collection: ["non-validé", "validé"], prompt: "Sélectionner la validité du collaborateur"
+  = f.input :statut
+  = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
+  = f.input :nat_diplome, collection: ["Autre", "Scientifique"]
+  = f.association :manager, collection: Collaborator.managers, prompt: "Sélectionner le manager du consultant"
+  = f.input :commentaire
+  .form-actions
+    = f.submit "Créer Collaborateur", :class => 'btn btn-primary'
+    = link_to "Annuler", collaborators_path, :class => 'btn'
